Second commit - Add dropdown button

--- a/index.html
+++ b/index.html
@@ -3,12 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="script.js"></script>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <script src="jquery-3.7.1.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js" defer></script>
+    <script src="script.js" defer></script>
     <title>Document</title>
   </head>
   <body>
     <h1>Trying Out Chart JS</h1>
+    <div class="dropdown">
+      <button onclick="myFunction()" class="dropbtn">Chart Type</button>
+      <div id="myDropdown" class="dropdown-content">
+        <a href="#">Pie</a>
+        <a href="#">Bar</a>
+        <a href="#">Line</a>
+      </div>
+    </div>
     <div>
       <canvas id="myChart"></canvas>
     </div>
