Add 4 chart types with working button to select

--- a/index.html
+++ b/index.html
@@ -3,20 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="styles.css" />
     <script src="jquery-3.7.1.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js" defer></script>
     <script src="script.js" defer></script>
     <title>Document</title>
   </head>
   <body>
-    <h1>Trying Out Chart JS</h1>
+    <h1>Time Spent on This Project</h1>
     <div class="dropdown">
-      <button onclick="myFunction()" class="dropbtn">Chart Type</button>
+      <h2>Chart Type  :</h2>
+      <button class="dropbtn"></button>
       <div id="myDropdown" class="dropdown-content">
-        <a href="#">Pie</a>
-        <a href="#">Bar</a>
-        <a href="#">Line</a>
+        <a href="#">pie</a>
+        <a href="#">bar</a>
+        <a href="#">line</a>
+        <a href="#">doughnut</a>
+        <a href="#">polarArea</a>
       </div>
     </div>
     <div>
